<resources>
    <string name="app_name">Enpublic</string>
    <string name="backend_client_id" translatable="false">319027682655-bid2hg23ea1avsg1ip2ph3c850mjcbod.apps.googleusercontent.com</string>
    <string name="title_activity_main">Enpublic</string>
    <string name="et_to_hint">To...</string>
    <string name="et_from_hint">From...</string>
    <string name="menu_search">Search</string>
    <string name="menu_profile">Profile</string>
    <string name="label_search">Search</string>
    <string name="et_search_hint">Search...</string>
    <string name="tv_empty_list">Nothing found...</string>
    <string name="b_from_station">From</string>
    <string name="b_to_station">To</string>
    <string name="b_go">Go</string>
    <string name="title_activity_login">Sign in</string>
    <string name="et_email">E-Mail</string>
    <string name="et_password">Password</string>
    <string name="b_signin">Sign In</string>
    <string name="b_signup">Sign Up</string>
    <string name="et_password_confirm">Confirm Password</string>
    <string name="et_mail">E-Mail</string>
    <string name="et_name">Name</string>
    <string name="title_signin_activity">Sign In</string>
    <string name="title_signup_activity">Sign In</string>
    <string name="tv_email_error">Please enter a valid email!</string>
    <string name="tv_confirm_error">Confirmation doesn\'t match with password!</string>
    <string name="menu_logout">Log Out</string>
    <string name="title_profile_activity">Profile</string>
    <string name="tv_empty_result">No results found</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_achievements">No achievements found</string>
    <string name="no_gained_achievements">Achievements require working harder! Keep going...</string>
    <string name="title_activity_signin">Sign In</string>
    <string name="title_activity_maps">Map</string>
    <string name="activity_notification_title">Activity Result</string>
    <string name="activity_notification_body">You\'ve received %1$d achievements according to your last activities.</string>
</resources>
