<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/et_from_hint"
            />

        <EditText
            android:id="@+id/etTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/et_to_hint"
            />

        <Button
            android:id="@+id/bGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_go"
            android:layout_gravity="end"
            />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.mkytr.enpublic.MainActivity" />

        <LinearLayout
            android:id="@+id/stationInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            android:background="#ffffff"
            android:padding="9dp"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/tvInfoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/tvLineName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <Button
                    android:id="@+id/bFromStation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/b_from_station"/>

                <Button
                    android:id="@+id/bToStation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/b_to_station"/>
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</LinearLayout>
